force-app/main/default/objects/clofor_com_cfs__Job_Opening__c/fields/clofor_com_cfs__Approval_by__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Approval_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Opening1</relationshipName>
    <type>Lookup</type>
</CustomField>