force-app/main/default/objects/clofor_com_cfs__Job_Opening__c/fields/clofor_com_cfs__Expiresin__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Expiresin__c</fullName>
    <label>Expires in:</label>
    <type>Date</type>
</CustomField>