force-app/main/default/objects/clofor_com_cfs__Job_Opening__c/fields/clofor_com_cfs__JobDescription__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__JobDescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Description</label>
    <referenceTo>clofor_com_cfs__Job_Description__c</referenceTo>
    <relationshipLabel>Job Opening</relationshipLabel>
    <relationshipName>Job_Opening</relationshipName>
    <type>Lookup</type>
</CustomField>