force-app/main/default/objects/clofor_com_cfs__Job_Opening__c/fields/clofor_com_cfs__Quantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Quantity__c</fullName>
    <label>Quantity</label>
    <type>TextArea</type>
</CustomField>